fixed left alignment of logo to 20px

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -9,6 +9,5 @@ header
 .logo
   {
     content: url("../images/logo.png") no-repeat;
-    display: flex;
-    justify-content: center;
+    margin-left: 20px;
   }
